--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.1",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.1",
     "redis": "^2.8.0"
   }
 }
