--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "bugs": {
     "url": "https://github.com/Web-developer-kun/ohai-backend/issues"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "homepage": "https://github.com/Web-developer-kun/ohai-backend#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -29,5 +34,10 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "redis": "^2.8.0"
+  },
+  "devDependencies": {
+    "husky": "^3.0.0",
+    "prettier": "1.18.2",
+    "pretty-quick": "^1.11.1"
   }
 }
