--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Web-developer-kun/ohai-backend#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
@@ -33,7 +34,8 @@
     "mongoose": "^5.6.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "husky": "^3.0.0",
