Initialize redis client and import to all controllers rather than starting new for each one

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - /usr/src/ohai-backend/node_modules/
 
   redis:
-    image: redis:latest
+    image: redis:5.0.5
     ports:
       - "6379:6379"
 
