--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-form-data": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.1",
     "morgan": "^1.9.1",
