Set up face detection api

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CLOUD_NAME=dvlvx2yz2
 API_KEY=621965875181331
 API_SECRET=7YuthCLF4M6rS-J3K3kPwgTH_gc
 JWT_SECRET=CHOPIN3MAZURKASOP56NO3INCMINOR
+CLARIFAI_API=bcc6c6f0875049ed928614378710fdef
