--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "clarifai": "^2.9.0",
     "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
